--- a/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
+++ b/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
@@ -29,8 +29,11 @@
 
   <style>
     .container {
+      height: 600px;
       display: grid;
-      grid-gap: 20px;
+      gap: 20px;
+      border: 10px solid var(--yellow);
+      grid-template-columns: auto 1fr;
     }
   </style>
 </body>
