--- a/09 - Sizing Grid Items/sizing-items-START.html
+++ b/09 - Sizing Grid Items/sizing-items-START.html
@@ -40,6 +40,7 @@
     <div class="item item-28">28</div>
     <div class="item item-29">29</div>
     <div class="item item-30">30</div>
+    <div class="item item-31">31</div>
   </div>
 
   <style>
